--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,14 @@
             <input type="text" placeholder="No file selected">
             <button class="one">BROESE...</button>
         </div>
+        <div class="list">
+            <input type="text" placeholder="No file selected">
+            <button class="two">BROESE...</button>
+        </div>
+        <div class="list">
+            <input type="text" placeholder="No file selected">
+            <button class="three">BROESE...</button>
+        </div>
 
 
     </div>
