--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
             <input type="text" placeholder="No file selected">
             <button class="three">BROESE...</button>
         </div>
+        <div class="list">
+            <input type="text" placeholder="No file selected">
+            <button class="four">BROESE...</button>
+        </div>
 
 
     </div>
